--- a/views/restaurant-menu.ejs
+++ b/views/restaurant-menu.ejs
@@ -1,7 +1,15 @@
 <%- include('includes/header') %>
 
 <body>
-  <h1>my restaurant page</h1>
+  <h1>My restaurant page</h1>
+  <% if(!member) { %>
+  <h2>siz authenticated emassiz</h2>
+  <% } else { %>
+  <h1>
+    siz authenticated bolgansiz, va sizning nickingiz <%= member.mb_nick%>
+  </h1>
+  <p>sizning telefoningiz <%= member.mb_phone%></p>
+  <% } %>
 </body>
 
 <%- include('includes/footer') %>
