feat: signup page publish finish

--- a/views/login-page.ejs
+++ b/views/login-page.ejs
@@ -2,15 +2,15 @@
  <link rel="stylesheet" type="text/css" href="/css/login.css"     />
 <body>
   <form class="login_container" action="/resto/login-page" method="POST" >
-     <div class="login-frame" >
-         <div class="login-top" >
+     <div class="login_frame"  style="height: 460px;" >
+         <div class="login_top" >
           <span>Saytga kirish</span>
           <div>Bosh sahifaga kirish <a href="/resto/" style="color: #6440fb;" >Home</a> </div>
           <p>Ro'yhattan o'tmaganmisiz ? <a href="/resto/signup" style="color: #6440fb;" >Sign up</a> </p>
          </div>
 
-         <div class="login-input-frame" >
-          <div class="login-input-container" >
+         <div class="login_input_frame" >
+          <div class="login_input_container" >
             <label >Foydalanuvchini ismi</label>
             <input
              type="text"
@@ -19,7 +19,7 @@
               name="mb_nick" 
               required/>
           </div>
-          <div class="login-input-container" >
+          <div class="login_input_container" >
             <label >Password kiriting</label>
             <input 
             type="password" 
