--- a/public/css/login.css
+++ b/public/css/login.css
@@ -41,17 +41,17 @@ html ,body {
      }
 }
 
-.login_container .login-frame{
+.login_container .login_frame{
     position: relative;
     width: 420px;
-    height: 460px;
+    height: auto;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
     padding: 25px;
     background: #fff;
 }
-.login-frame .login-top{
+.login_frame .login_top{
    position: relative;
    width: 100%;
    height: auto;
@@ -59,21 +59,21 @@ html ,body {
    flex-direction: column;
 
 }
-.login-top span {
+.login_top span {
     font-family: 'Courier New';
     font-style: normal;
     font-weight: 700;
     font-size: 30px;
     line-height: 34px;
 }
-.login-top div {
+.login_top div {
     font-family: 'Courier New';
     font-style: normal;
     font-weight: 400;
     font-size: 15px;
     line-height: 26px;
 }
-.login-top p {
+.login_top p {
     margin-top: 15px;
     font-family: 'Courier New';
     font-style: normal;
@@ -81,14 +81,14 @@ html ,body {
     font-size: 15px;
     line-height: 26px;
 }
-.login-frame .login-input-frame{
+.login_frame .login_input_frame{
    position: relative;
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
 }
-.login-input-container{
+.login_input_container{
     position: relative;
     margin-top: 15px;
    width: 100%;
@@ -96,14 +96,14 @@ html ,body {
    display: flex;
    flex-direction: column;
 }
-.login-input-container label {
+.login_input_container label {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 18px;  
 }
-.login-input-container input{
+.login_input_container input{
     position: relative;
     margin-top: 10px;
     padding-left:20px ;
@@ -112,7 +112,7 @@ html ,body {
     border: 1px solid rgba(157, 149, 149, 0.788);
 }
 
-.login-frame .login_btn {
+.login_frame .login_btn {
     position: relative;
     margin-top: 25px;
     width: 100%;
@@ -125,5 +125,134 @@ html ,body {
     font-size: 16px;
     line-height: 18px;  
 
+
+}
+
+/* sign-up*/
+
+.login_frame .sign_input_frame{
+    position: relative;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+ 
+.sign_input_frame  .sign_up_frame{
+    position: relative;
+    width: 49%;
+    height: auto;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+}
+
+.sign_up_frame label {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;  
+}
+.sign_up_frame input{
+    position: relative;
+    margin-top: 10px;
+    padding-left:20px ;
+    background: rgb(197, 194, 194);
+    border-radius: 7px  ;
+    border: 1px solid rgba(157, 149, 149, 0.788);
+}
+
+.media_frame{
+    position: relative;
+    margin-top: 15px;
+    width: 100%;
+    height: 250px;
+    display: flex;
+    flex: row;
+    justify-content: space-between;
+
+}
+
+.media_frame .upload_img_frame{
+    position: relative;
+    width: 275px;
+    height: 95%;
+    display: flex;
+    border-radius: 15px;
+}
+
+.media_frame .upload_container{
+    position: relative;
+    margin-left: 30px;
+    width: 75%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.media_text{
+    font-family:'GT Walsheim Pro';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 18px;
+    color: #140342;
+}
+
+.filebox{
+    display: flex;
+    margin-top: 25px;
+}
+
+.filebox input[type= 'file'] {
+position: relative;
+width: 1px;
+height: 1px;
+overflow: hidden;
+clip: rect(0,0,0,0);
+border: 0;
+}
+
+.filebox label{
+    width: 140px;
+    height: 55px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #6a7a99;
+    border-radius: 0 8px 8px 0;
+    font-family:'GT Walsheim Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 26px;
+    color: #ffff;
+
+}
+
+.filebox .upload-name{
+    position: relative;
+    padding: 20px;
+    width: 85%;
+    height: 55px;
+
+    display: flex;
+    background: #dddd;
+
+    border: 1px solid #dddd;
+    border-radius: 8px 0px 0px 8px;
+}
+
+.thumbnail_desc{
+    margin-top: 25px;
+    font-family:'GT Walsheim Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 26px;
+    color: #2475df;
 
 }
