--- a/views/login-page.ejs
+++ b/views/login-page.ejs
@@ -6,7 +6,7 @@
          <div class="login_top" >
           <span>Saytga kirish</span>
           <div>Bosh sahifaga kirish <a href="/resto/" style="color: #6440fb;" >Home</a> </div>
-          <p>Ro'yhattan o'tmaganmisiz ? <a href="/resto/signup" style="color: #6440fb;" >Sign up</a> </p>
+          <p>Ro'yhattan o'tmaganmisiz ? <a href="/resto/sign-up" style="color: #6440fb;" >Sign up</a> </p>
          </div>
 
          <div class="login_input_frame" >
