--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -82,6 +82,23 @@ html, body {
 }
 
 .new_dish_text{
+   
+   
+    font-family: 'Segoe UI';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 25px;
+    color: #ce2929;
+    margin-bottom: 30px;
+}
+.new_dis_text{
+   
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-family: 'Segoe UI';
     font-style: normal;
     font-weight: 400;
@@ -103,3 +120,193 @@ html, body {
     line-height: 26px;
     color: #4F547B;
 }
+.dishcontainer {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.long-input {
+    width: 100%;
+    position: relative;
+    margin-top: 25px;
+    
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+
+.long-input label {
+    
+    font-family: 'Source Serif Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 25px;
+    color: #ffff;
+    display: flex;
+    text-align: center;
+
+
+}
+
+.long-input input[type= 'text'] {
+    position: relative;
+    margin-top: 10px;
+    padding-left: 20px;
+    width: 100%;
+    height: 54px;
+    border: none;
+
+    background: #f7f7f7;
+    box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
+    border-radius: 5px;
+
+    font-family: 'GT Walsheim Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 26px;
+    color: #4f547b;
+}
+
+.dishcontainer .half_input_frame{
+    position: relative;
+    margin-top: 25px;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.half_input_frame .half_input{
+    position: relative;
+    width: 49%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.half_input label{
+    font-family: 'Source Serif Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 25px;
+    color: #ffff;
+}
+
+.half_input input {
+    position: relative;
+    margin-top: 10px;
+    padding-left: 20px;
+    width: 100%;
+    height: 54px;
+    border: none;
+    border-radius: 8px;
+}
+.half_input select {
+    position: relative;
+    margin-top: 10px;
+    padding: 0px 20px;
+    width: 100%;
+    height: 55px;
+    display: flex;
+    border: none;
+    background: #f7f7f7;
+    box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
+    border-radius: 5px;
+
+    font-family: 'GT Walsheim Pro';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 26px;
+    color: #4F547B;
+}
+.long-input textarea{
+    position: relative;
+    margin-top: 10px;
+    padding: 20px;
+    width: 100%;
+    height: 200px;
+    border: none;
+
+    background: #F7F7F7;
+    box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
+    border-radius: 5px;
+
+    font-family:'GT Walsheim Pro' ;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 26px;
+    color: #4F547B;
+}
+
+.img_frame {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.img_frame label{
+    font-family:'GT Walsheim Pro';
+    margin-top: 30px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 25px;
+    color: #FFFF;
+
+
+}
+.media_frame{
+    position: relative;
+    margin-top: 10px;
+    width: 100%;
+    height: 250px;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.media_frame .upload_img_box{
+    position: relative;
+    width: 19%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.upload_img_box img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+
+    display: block;
+    border-radius: 10px;
+}
+#file {
+    opacity: 0.2;
+    border: none;
+    border-radius: 10px;
+    background: grey;
+    position: absolute;
+    left: 0px;
+    width: 100%;
+    top: 0px;
+    height: 100%;
+    /* cursor: pointer; */
+  }
