--- a/views/all-Restaurants.ejs
+++ b/views/all-Restaurants.ejs
@@ -1,1 +1,67 @@
-<h1>all-restaurant</h1>
+<%- include('includes/header') %>
+
+<link rel="stylesheet" type="text/css" href="/css/menu.css">
+
+<body>
+    
+<div id="main_container" >
+ <div class="group_name">
+    <ul class="nav ">
+        <li class="nav-item" style="cursor: pointer;" >
+                <a class="nav-link active" aria-current="page" href="/resto">Home</a>
+        </li>
+        <li class="nav-item" style="cursor: pointer;" >
+                <a class="nav-link active" aria-current="page" href="/resto/all-restaurant">AllResto</a>
+        </li>
+        <li class="nav-item" style="cursor: pointer;" >
+                <a class="nav-link active" aria-current="page" href="/resto/logout">LogOut</a>
+        </li>
+    </ul>  
+ </div>
+ <div class="restaurant_menu_frame">
+    <div class="restaurant_container">
+        <div class="resto_table">
+           <span class="new_dish_text">
+            Barcha oshxonalar ro'yxati
+           </span> 
+           <table class="table table-hover table-sm">
+            <thead class="thead-light" >
+            <tr class="thead-light" >
+              <th scope="col" >T/r</th>
+              <th scope="col" >Oshxona nomi</th>
+              <th scope="col" >Oshxona telefon raqami</th>
+              <th scope="col" >Oshxona TOP</th>
+              <th scope="col" >Oshxona Holati</th>
+             </tr> 
+            </thead>
+            <tbody style="background: white;" >
+                <td>1</td>
+                <td>Kebab Time</td>
+                <td>123123</td>
+                <td style="width: 13%;" class="mb_top" >
+                    <label class="switch" >
+                    <input type="checkbox">
+                    <span class="slider around" ></span>
+                    </label>
+                </td>
+                <td style="width: 13%;" >
+                    <select class="spec-select mb_status">
+                        <option value="ONPAUSE" >ONPAUSE</option>
+                        <option value="ACTIVE" >ACTIVE</option>
+                        <option value="DELETED" >DELETED</option>
+                    </select>
+                </td>
+                
+               </tbody>
+        </table>
+        </div>
+    </div>
+ </div>
+
+</div>
+
+
+</body>
+
+
+<%- include('includes/footer') %>
