--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -74,7 +74,7 @@ html, body {
 .restaurant_container .dishs_table{
     position: relative;
     width: 100%;
-    /* height: auto; */
+    height: auto;
     margin-top: 30px;
     display: flex;
     flex-direction: column;
@@ -187,27 +187,27 @@ input:checked + .slider:before{
     margin-bottom: 30px;
 }
 
-.dishcontainer {
-    position: relative;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    
-}
 
-.long-input {
+
+.restaurant_container .dish_container {
+    position: relative;
+    margin-top: 20px;
     width: 100%;
+    height: auto;
+  
+    display: none;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .long-input {
     position: relative;
     margin-top: 25px;
-    
+    width: 100%;
     height: auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-}
-
+  }
 
 .long-input label {
     
@@ -217,13 +217,12 @@ input:checked + .slider:before{
     font-size: 16px;
     line-height: 25px;
     color: #ffff;
-    display: flex;
-    text-align: center;
+    
 
 
 }
 
-.long-input input[type= 'text'] {
+.long-input input {
     position: relative;
     margin-top: 10px;
     padding-left: 20px;
@@ -243,7 +242,7 @@ input:checked + .slider:before{
     color: #4f547b;
 }
 
-.dishcontainer .half_input_frame{
+.dish_container .half_input_frame{
     position: relative;
     margin-top: 25px;
     width: 100%;
@@ -278,6 +277,7 @@ input:checked + .slider:before{
     height: 54px;
     border: none;
     border-radius: 8px;
+    background: #f7f7f7;
 }
 .half_input select {
     position: relative;
